fixed logo not filling nav and buttons in nav beign too big

--- a/exerciseur/css/style.css
+++ b/exerciseur/css/style.css
@@ -65,13 +65,11 @@ header > div.barHeader {
     color: var(--font-white-color);
 }
 
-.barHeader >a{
-    max-height: 6em;
-    max-width: 6em; 
-    
+.barHeader > a {
+    max-width: 6em;
 }
 
-.barHeader >a >img{
+.barHeader > a >img{
     height: 100%;
     width: 100%;
 }
@@ -82,7 +80,6 @@ header > div.barHeader {
     justify-content: space-evenly;
     gap: 5px;
     flex-wrap: nowrap;
-    width: 33%;
     justify-content: right;
 }
 
